# llm-key-mgr-cli

./: .gitignore  README.md  _clean.py  _cleanup.bat  _cleanup2.bat  _create.bat  _push.bat  _push.py  pyproject.toml  test_e2e.py
src/apikey_manager/: __init__.py  cli.py  crypto.py  display.py  input_util.py  menu.py  models.py
src/apikey_manager/locales/: en_US.json  zh_CN.json
src/llm_key_mgr_cli/: cli.py  display.py  i18n.py  menu.py  vault.py
src/llm_key_mgr_cli/locales/: en_US.json  zh_CN.json
