[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-key-mgr-cli"
version = "1.1.0"
description = "Production-grade AI API Key Manager CLI with encryption"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
llm-key-mgr = "llm_key_mgr_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
